[prem] ADDED: pin note colour note and archived note updateds
